@@ -94,8 +94,8 @@ float default_operand_cost(const operand *o, const assignment &a, unsigned short
   return(c);
 }
 
-template <class G_t, class I_t>
-float default_instruction_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
+template <class G_t, class I_t> static float
+default_instruction_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
 {
   float c = 0.0f;
 
@@ -109,8 +109,8 @@ float default_instruction_cost(const assignment &a, unsigned short int i, const 
 }
 
 // Treat assignment separately to handle coalescing.
-template <class G_t, class I_t>
-float assign_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
+template <class G_t, class I_t> static float
+assign_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
 {
   float c = 0.0f;
 
@@ -193,20 +193,78 @@ float assign_cost(const assignment &a, unsigned short int i, const G_t &G, const
   return(c);
 }
 
-template <class G_t, class I_t>
-float ifx_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
+template <class G_t, class I_t> static float
+ifx_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
 {
   const iCode *ic = G[i].ic;
 
   return(default_operand_cost(IC_COND(ic), a, i, G, I));
 }
 
-template <class G_t, class I_t>
-float jumptab_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
+template <class G_t, class I_t> static float
+jumptab_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
 {
   const iCode *ic = G[i].ic;
 
   return(default_operand_cost(IC_JTCOND(ic), a, i, G, I));
+}
+
+// This serves to avoid operations that overwrite their own operands before using them, e.g. x = y | a, with x_0 placed in the same reg as y_1.
+// Code generation for such cases is broken (and the fix is ugly) so better avoid them.
+template <class G_t, class I_t> static bool
+result_overwrites_operand(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
+{
+  const iCode *ic = G[i].ic;
+	
+  const operand *result = IC_RESULT(ic);
+  const operand *left = IC_LEFT(ic);
+  const operand *right = IC_RIGHT(ic);
+	
+  if(!result || !IS_SYMOP(result))
+    return(false);
+	
+  std::multimap<int, var_t>::const_iterator oir, oir_end, oirs;
+	
+  boost::tie(oir, oir_end) = G[i].operands.equal_range(OP_SYMBOL_CONST(result)->key);
+  if(oir == oir_end)
+    return(false);
+		
+  std::multimap<int, var_t>::const_iterator oio, oio_end;
+	
+  if(left && IS_SYMOP(left))
+    for(boost::tie(oio, oio_end) = G[i].operands.equal_range(OP_SYMBOL_CONST(left)->key); oio != oio_end; ++oio)
+      for(oirs = oir; oirs != oir_end; ++oirs)
+        {
+          var_t rvar = oirs->second;
+          var_t ovar = oio->second;
+          reg_t rreg = a.global[rvar];
+          reg_t oreg = a.global[ovar];
+      	  if(rreg >= 0 && oreg >= 0 && rreg == oreg && I[rvar].byte < I[ovar].byte)
+      		return(true);
+        }
+
+  if(right && IS_SYMOP(right))
+    for(boost::tie(oio, oio_end) = G[i].operands.equal_range(OP_SYMBOL_CONST(right)->key); oio != oio_end; ++oio)
+      for(oirs = oir; oirs != oir_end; ++oirs)
+        {
+          var_t rvar = oirs->second;
+          var_t ovar = oio->second;
+          reg_t rreg = a.global[rvar];
+          reg_t oreg = a.global[ovar];
+      	  if(rreg >= 0 && oreg >= 0 && rreg == oreg && I[rvar].byte < I[ovar].byte)
+      		return(true);
+        }
+        
+  return(false);
+}
+
+template <class G_t, class I_t> static float
+or_cost(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
+{
+  if(result_overwrites_operand(a, i, G, I))
+    return(std::numeric_limits<float>::infinity());
+
+  return(default_instruction_cost(a, i, G, I));
 }
 
 // Return true, iff the operand is placed (partially) in r.
@@ -490,6 +548,8 @@ float instruction_cost(const assignment &a, unsigned short int i, const G_t &G, 
       return(ifx_cost(a, i, G, I));
     case JUMPTABLE:
       return(jumptab_cost(a, i, G, I));
+    case '|':
+      return(or_cost(a, i, G, I));
     default:
       return(default_instruction_cost(a, i, G, I));
     }
